Prototypes and inheritance

--- a/index.html
+++ b/index.html
@@ -9,31 +9,21 @@
 </head>
 
 <body>
-  <div id="carousel" class="carousel">
+
+  <div id="myCarousel" class="carousel">
     <div id="slides-container" class="slides">
-      <div class="slide active"></div>
-      <div class="slide"></div>
-      <div class="slide"></div>
-      <div class="slide"></div>
-      <div class="slide"></div>
+      <div class="item slide active"></div>
+      <div class="item slide"></div>
+      <div class="item slide"></div>
+      <div class="item slide"></div>
+      <div class="item slide"></div>
     </div>
-
-    <div id="controls-container" class="controls">
-      <span id="pause-btn" class="control control-pause">Pause</span>
-      <span id="prev-btn" class="control control-prev">Prev</span>
-      <span id="next-btn" class="control control-next">Next</span>
-    </div>
-
-    <div id="indicators-container" class="indicators">
-      <div class="indicator active" data-slide-to="0"></div>
-      <div class="indicator" data-slide-to="1"></div>
-      <div class="indicator" data-slide-to="2"></div>
-      <div class="indicator" data-slide-to="3"></div>
-      <div class="indicator" data-slide-to="4"></div>
-    </div>
-
   </div>
-  <script src="main.js"></script>
+
+  <script src="carousel.js"></script>
+  <script src="swipe-carousel.js"></script>
+  <script src="index.js"></script>
+
 </body>
 
 </html>
