--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <div id="myCarousel" class="carousel">
+  <div id="carousel" class="carousel">
     <div id="slides-container" class="slides">
       <div class="item slide active"></div>
       <div class="item slide"></div>
@@ -20,9 +21,7 @@
     </div>
   </div>
 
-  <script src="carousel.js"></script>
-  <script src="swipe-carousel.js"></script>
-  <script src="index.js"></script>
+  <script src="index.js" type="module"></script>
 
 </body>
 
